@@ -29,11 +29,11 @@ remove = Test::DZil
 remove = Dist::Zilla::Role::FileFinderUser
 remove = Dist::Zilla::Role::PPI
 remove = Dist::Zilla::Role::TextTemplate
-
+remove = Dist::Zilla::Role::FileGatherer
 
 [Prereqs]
 Dist::Zilla = 6.000
-Alien::Build = 0.32
+Alien::Build = 1.28
 
 [Author::Plicease::Upload]
 cpan = 1
